--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,5 +4,5 @@
     "settings": {
         "terminal.integrated.shell.linux": "/bin/bash"
     },
-    "postCreateCommand": "dotnet restore ./MyConsoleApp/MyConsoleApp.csproj",
+    "postCreateCommand": "dotnet restore ./MyConsoleApp/MyConsoleApp.csproj"
 }
